Initial rampage support
- Shows tanks used in rampage mode
- Allows to filter for them
- Stats displayed in the main window are now total stats for the rampage
mode and not the ones for the first vehicle anymore

--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Полигон" />
     <item ID="01_karelia" Name="Карелия" />
     <item ID="02_malinovka" Name="Малиновка" />
+    <item ID="03_campania" Name="Провинция" />
     <item ID="04_himmelsdorf" Name="Химелсдорф" />
     <item ID="05_prohorovka" Name="Прохоровка" />
     <item ID="06_ensk" Name="Енск" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Рибарски залив" />
     <item ID="37_caucasus" Name="Клисура" />
     <item ID="38_mannerheim_line" Name="Арктика" />
+    <item ID="39_crimea" Name="Южен бряг" />
     <item ID="43_north_america" Name="Северозапад" />
     <item ID="44_north_america" Name="Лайв Окс" />
     <item ID="45_north_america" Name="Магистрала" />
     <item ID="47_canada_a" Name="Тих бряг" />
     <item ID="59_asia_great_wall" Name="Имперска граница" />
+    <item ID="60_asia_miao" Name="Перлената река" />
     <item ID="63_tundra" Name="Тундра" />
     <item ID="73_asia_korea" Name="Свещената долина" />
     <item ID="83_kharkiv" Name="Харков" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Призрачен град" />
     <item ID="96_prohorovka_defense" Name="Огнена дъга" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Провинция" />
     <item ID="15_komarin" Name="Комарин" />
-    <item ID="39_crimea" Name="Южен бряг" />
     <item ID="51_asia" Name="Драконов хребет" />
     <item ID="53_japan" Name="Скрито село" />
-    <item ID="60_asia_miao" Name="Перлената река" />
     <item ID="85_winter" Name="Северогорск" />
     <item ID="87_ruinberg_on_fire" Name="Руинберг в пламъци" />
     <item ID="99_himmelball" Name="Шампионат на Химелсдорф" />
     <item ID="102_deathtrack" Name="Танково състезание" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Времето за битка изтече" />
     <item ID="4" Name="Битката е прекратена заради системна грешка" />
     <item ID="5" Name="Техническа загуба" />
+    <item ID="6" Name="Точки за победа" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
