--- a/data/lang/cs.xml
+++ b/data/lang/cs.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Výcviková oblast" />
     <item ID="01_karelia" Name="Karélie" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Kampánie" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prochorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Rybářský přístav" />
     <item ID="37_caucasus" Name="Horský průsmyk" />
     <item ID="38_mannerheim_line" Name="Arktida" />
+    <item ID="39_crimea" Name="Jižní pobřeží" />
     <item ID="43_north_america" Name="Severozápad" />
     <item ID="44_north_america" Name="Dubový lesík" />
     <item ID="45_north_america" Name="Dálnice" />
     <item ID="47_canada_a" Name="Klidné pobřeží" />
     <item ID="59_asia_great_wall" Name="Hranice císařství" />
+    <item ID="60_asia_miao" Name="Perlová řeka" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Posvátné údolí" />
     <item ID="83_kharkiv" Name="Charkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Město duchů" />
     <item ID="96_prohorovka_defense" Name="Ohnivý výběžek" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Kampánie" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Jižní pobřeží" />
     <item ID="51_asia" Name="Dragon Ridge" />
     <item ID="53_japan" Name="Skrytá vesnice" />
-    <item ID="60_asia_miao" Name="Perlová řeka" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg v plamenech" />
     <item ID="99_himmelball" Name="Himmelsdorfský šampionát" />
     <item ID="102_deathtrack" Name="Takové rallye" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Neznámo" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Čas bitvy vypršel" />
     <item ID="4" Name="Bitva skončila kvůli selhání systému" />
     <item ID="5" Name="Technická porážka" />
+    <item ID="6" Name="Vítězné body" />
     <item ID="unknown" Name="Neznámo" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
