--- a/data/lang/de.xml
+++ b/data/lang/de.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Übungsgelände" />
     <item ID="01_karelia" Name="Karelien" />
     <item ID="02_malinovka" Name="Malinowka" />
+    <item ID="03_campania" Name="Provinz" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorowka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Fischerbucht" />
     <item ID="37_caucasus" Name="Bergpass" />
     <item ID="38_mannerheim_line" Name="Polargebiet" />
+    <item ID="39_crimea" Name="Südküste" />
     <item ID="43_north_america" Name="Nordwesten" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Highway" />
     <item ID="47_canada_a" Name="Küste" />
     <item ID="59_asia_great_wall" Name="Reichsgrenze" />
+    <item ID="60_asia_miao" Name="Perlenfluss" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Heiliges Tal" />
     <item ID="83_kharkiv" Name="Charkow" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Geisterstadt" />
     <item ID="96_prohorovka_defense" Name="Feuriger Bogen" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provinz" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Südküste" />
     <item ID="51_asia" Name="Drachenkamm" />
     <item ID="53_japan" Name="Verstecktes Dorf" />
-    <item ID="60_asia_miao" Name="Perlenfluss" />
     <item ID="85_winter" Name="Sewerogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg in Flammen" />
     <item ID="99_himmelball" Name="Himmelsdorf-Meisterschaft" />
     <item ID="102_deathtrack" Name="Panzerrallye" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Unbekannt" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Gefechtszeitlimit überschritten" />
     <item ID="4" Name="Gefecht durch Systemfehler beendet" />
     <item ID="5" Name="Technische Niederlage" />
+    <item ID="6" Name="Siegpunkte" />
     <item ID="unknown" Name="Unbekannt" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
