--- a/data/lang/en.xml
+++ b/data/lang/en.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Training area" />
     <item ID="01_karelia" Name="Karelia" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Province" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Fisherman's Bay" />
     <item ID="37_caucasus" Name="Mountain Pass" />
     <item ID="38_mannerheim_line" Name="Arctic Region" />
+    <item ID="39_crimea" Name="South Coast" />
     <item ID="43_north_america" Name="Northwest" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Highway" />
     <item ID="47_canada_a" Name="Serene Coast" />
     <item ID="59_asia_great_wall" Name="Empire's Border" />
+    <item ID="60_asia_miao" Name="Pearl River" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Sacred Valley" />
     <item ID="83_kharkiv" Name="Kharkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Ghost Town" />
     <item ID="96_prohorovka_defense" Name="Fiery Salient" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Province" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="South Coast" />
     <item ID="51_asia" Name="Dragon Ridge" />
     <item ID="53_japan" Name="Hidden Village" />
-    <item ID="60_asia_miao" Name="Pearl River" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg on Fire" />
     <item ID="99_himmelball" Name="Himmelsdorf Championship" />
     <item ID="102_deathtrack" Name="Tank Rally" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Unknown" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Battle time expired" />
     <item ID="4" Name="Battle ended due to system failure" />
     <item ID="5" Name="Technical Defeat" />
+    <item ID="6" Name="Victory Points" />
     <item ID="unknown" Name="Unknown" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
