--- a/data/lang/et.xml
+++ b/data/lang/et.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Treeningala" />
     <item ID="01_karelia" Name="Karjala" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Provints" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Kalurilaht" />
     <item ID="37_caucasus" Name="Mäekuru" />
     <item ID="38_mannerheim_line" Name="Polaarala" />
+    <item ID="39_crimea" Name="Lõunarannik" />
     <item ID="43_north_america" Name="Loodekaart" />
     <item ID="44_north_america" Name="Virgiinia tammed" />
     <item ID="45_north_america" Name="Kiirtee" />
     <item ID="47_canada_a" Name="Vaikne rannik" />
     <item ID="59_asia_great_wall" Name="Impeeriumi piir" />
+    <item ID="60_asia_miao" Name="Pärlijõgi" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Püha org" />
     <item ID="83_kharkiv" Name="Harkiv" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Kummituslinn" />
     <item ID="96_prohorovka_defense" Name="Tulest kaar" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provints" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Lõunarannik" />
     <item ID="51_asia" Name="Draakoni ahelik" />
     <item ID="53_japan" Name="Varjatud küla" />
-    <item ID="60_asia_miao" Name="Pärlijõgi" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Leekides Ruinberg" />
     <item ID="99_himmelball" Name="Himmelsdorfi meistrivõistlused" />
     <item ID="102_deathtrack" Name="Tankiralli" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Tundmatu" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Lahingu ajalimiit on lõppenud" />
     <item ID="4" Name="Lahing lõppes süsteemivea tõttu" />
     <item ID="5" Name="Tehniline kaotus" />
+    <item ID="6" Name="Võidupunktid" />
     <item ID="unknown" Name="Tundmatu" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
