--- a/data/lang/fr.xml
+++ b/data/lang/fr.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Zone d'entraînement" />
     <item ID="01_karelia" Name="Carélie" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Province" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Baie du pêcheur" />
     <item ID="37_caucasus" Name="Col de montagne" />
     <item ID="38_mannerheim_line" Name="Arctique" />
+    <item ID="39_crimea" Name="Côte Sud" />
     <item ID="43_north_america" Name="Nord-Ouest" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Autoroute" />
     <item ID="47_canada_a" Name="Plage sereine" />
     <item ID="59_asia_great_wall" Name="Frontière de l'Empire" />
+    <item ID="60_asia_miao" Name="Rivière des Perles" />
     <item ID="63_tundra" Name="Toundra" />
     <item ID="73_asia_korea" Name="Vallée sacrée" />
     <item ID="83_kharkiv" Name="Kharkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Ville Fantôme" />
     <item ID="96_prohorovka_defense" Name="Percée fulgurante" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Province" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Côte Sud" />
     <item ID="51_asia" Name="Crête du Dragon" />
     <item ID="53_japan" Name="Village caché" />
-    <item ID="60_asia_miao" Name="Rivière des Perles" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg en feu" />
     <item ID="99_himmelball" Name="Championnat Himmelsdorf" />
     <item ID="102_deathtrack" Name="Rallye de chars" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Inconnu" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Temps de la bataille écoulé" />
     <item ID="4" Name="La bataille a pris fin suite à une erreur du système" />
     <item ID="5" Name="Défaite technique" />
+    <item ID="6" Name="Points de victoire" />
     <item ID="unknown" Name="Inconnu" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
