--- a/data/lang/it.xml
+++ b/data/lang/it.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Zona di addestramento" />
     <item ID="01_karelia" Name="Karelia" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Campania" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Baia del Pescatore" />
     <item ID="37_caucasus" Name="Passo di Montagna" />
     <item ID="38_mannerheim_line" Name="Regione Polare" />
+    <item ID="39_crimea" Name="Costa del Sud" />
     <item ID="43_north_america" Name="Nord-Ovest" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Highway" />
     <item ID="47_canada_a" Name="Costa Brava" />
     <item ID="59_asia_great_wall" Name="Confini Imperiali" />
+    <item ID="60_asia_miao" Name="Fiume delle Perle" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Valle Sacra" />
     <item ID="83_kharkiv" Name="Charkiv" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Città Fantasma" />
     <item ID="96_prohorovka_defense" Name="Difesa infuocata" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Campania" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Costa del Sud" />
     <item ID="51_asia" Name="Crinale del Drago" />
     <item ID="53_japan" Name="Villaggio Nascosto" />
-    <item ID="60_asia_miao" Name="Fiume delle Perle" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg in fiamme" />
     <item ID="99_himmelball" Name="Campionato di Himmelsdorf" />
     <item ID="102_deathtrack" Name="Tank Rally" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Sconosciuto" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Tempo di battaglia scaduto" />
     <item ID="4" Name="Battaglia terminata per un errore di sistema" />
     <item ID="5" Name="Sconfitta a tavolino" />
+    <item ID="6" Name="Punti Vittoria" />
     <item ID="unknown" Name="Sconosciuto" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
