--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Poligonas" />
     <item ID="01_karelia" Name="Karelija" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Provincija" />
     <item ID="04_himmelsdorf" Name="Himelsdorfas" />
     <item ID="05_prohorovka" Name="Prokorovka" />
     <item ID="06_ensk" Name="Enskas" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Žvejų įlanka" />
     <item ID="37_caucasus" Name="Kalnų perėja" />
     <item ID="38_mannerheim_line" Name="Poliarinis regionas" />
+    <item ID="39_crimea" Name="Pietinis krantas" />
     <item ID="43_north_america" Name="Šiaurėsvakarai" />
     <item ID="44_north_america" Name="Laivoksas" />
     <item ID="45_north_america" Name="Greitkelis" />
     <item ID="47_canada_a" Name="Tykusis krantas" />
     <item ID="59_asia_great_wall" Name="Imperijos pasienis" />
+    <item ID="60_asia_miao" Name="Perlų upė" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Šventasis slėnis" />
     <item ID="83_kharkiv" Name="Charkovas" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Pamirštas miestas" />
     <item ID="96_prohorovka_defense" Name="Ugnies lankas" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provincija" />
     <item ID="15_komarin" Name="Komarinas" />
-    <item ID="39_crimea" Name="Pietinis krantas" />
     <item ID="51_asia" Name="Drakono Ketera" />
     <item ID="53_japan" Name="Slaptas kaimas" />
-    <item ID="60_asia_miao" Name="Perlų upė" />
     <item ID="85_winter" Name="Severogorskas" />
     <item ID="87_ruinberg_on_fire" Name="Ruinbergas ugnyje" />
     <item ID="99_himmelball" Name="Himmelsdorfo čempionatas" />
     <item ID="102_deathtrack" Name="Tankų lenktynės" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Nežinoma" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Kovos laikas baigėsi" />
     <item ID="4" Name="Kova baigėsi dėl sistemos klaidos" />
     <item ID="5" Name="Techninis pralaimėjimas" />
+    <item ID="6" Name="Pergalės taškai" />
     <item ID="unknown" Name="Nežinoma" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
