--- a/data/lang/lv.xml
+++ b/data/lang/lv.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Tanku poligons" />
     <item ID="01_karelia" Name="Karēlija" />
     <item ID="02_malinovka" Name="Maļinovka" />
+    <item ID="03_campania" Name="Province" />
     <item ID="04_himmelsdorf" Name="Himmelsdorfa" />
     <item ID="05_prohorovka" Name="Prohorovka" />
     <item ID="06_ensk" Name="Enska" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Zvejnieku Līcis" />
     <item ID="37_caucasus" Name="Kalnu Pāreja" />
     <item ID="38_mannerheim_line" Name="Polārā Josla" />
+    <item ID="39_crimea" Name="Dienvidu Krasts" />
     <item ID="43_north_america" Name="Ziemeļrietumi" />
     <item ID="44_north_america" Name="Laivoksa" />
     <item ID="45_north_america" Name="Lielceļš" />
     <item ID="47_canada_a" Name="Klusais Krasts" />
     <item ID="59_asia_great_wall" Name="Impērijas Robeža" />
+    <item ID="60_asia_miao" Name="Pērļu Upe" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Svētā Ieleja" />
     <item ID="83_kharkiv" Name="Harkova" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Pamestā pilsēta" />
     <item ID="96_prohorovka_defense" Name="Ugunīgais Loks" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Province" />
     <item ID="15_komarin" Name="Komārina" />
-    <item ID="39_crimea" Name="Dienvidu Krasts" />
     <item ID="51_asia" Name="Pūķa Augstiene" />
     <item ID="53_japan" Name="Paslēptais Ciemats" />
-    <item ID="60_asia_miao" Name="Pērļu Upe" />
     <item ID="85_winter" Name="Severogorska" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberga Ugunīs" />
     <item ID="99_himmelball" Name="Himmelsdorfas Čempionāts" />
     <item ID="102_deathtrack" Name="Tanku sacīkstes" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Nezināms" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Kaujas laiks iztecējis" />
     <item ID="4" Name="Kauja pārtraukta sistēmas kļūdas dēļ" />
     <item ID="5" Name="Tehniskais zaudējums" />
+    <item ID="6" Name="Uzvaras punkti" />
     <item ID="unknown" Name="Nezināms" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
