--- a/data/lang/nl.xml
+++ b/data/lang/nl.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Oefenterrein" />
     <item ID="01_karelia" Name="Karelië" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Provincie" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Vissersbaai" />
     <item ID="37_caucasus" Name="Bergpas" />
     <item ID="38_mannerheim_line" Name="Poolgebied" />
+    <item ID="39_crimea" Name="Zuidkust" />
     <item ID="43_north_america" Name="Noordwest" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Snelweg" />
     <item ID="47_canada_a" Name="Serene kust" />
     <item ID="59_asia_great_wall" Name="Rijksgrens" />
+    <item ID="60_asia_miao" Name="Parelrivier" />
     <item ID="63_tundra" Name="Toendra" />
     <item ID="73_asia_korea" Name="Gewijde vallei" />
     <item ID="83_kharkiv" Name="Charkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Spookstad" />
     <item ID="96_prohorovka_defense" Name="Vurig Saillant" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provincie" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Zuidkust" />
     <item ID="51_asia" Name="Drakenrug" />
     <item ID="53_japan" Name="Verborgen Dorp" />
-    <item ID="60_asia_miao" Name="Parelrivier" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg in Brand" />
     <item ID="99_himmelball" Name="Himmelsdorf Kampioenschap" />
     <item ID="102_deathtrack" Name="Tankrally" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Onbekend" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Gevechttijd verstreken" />
     <item ID="4" Name="Gevecht gestopt door systeemfout" />
     <item ID="5" Name="Technisch verlies" />
+    <item ID="6" Name="Overwinningspunten" />
     <item ID="unknown" Name="Onbekend" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
