--- a/data/lang/pl.xml
+++ b/data/lang/pl.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Poligon" />
     <item ID="01_karelia" Name="Karelia" />
     <item ID="02_malinovka" Name="Malinowka" />
+    <item ID="03_campania" Name="Prowincja" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prochorowka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Zatoka rybacka" />
     <item ID="37_caucasus" Name="Przełęcz" />
     <item ID="38_mannerheim_line" Name="Koło podbiegunowe" />
+    <item ID="39_crimea" Name="Południowe Wybrzeże" />
     <item ID="43_north_america" Name="Północny zachód" />
     <item ID="44_north_america" Name="Dębina" />
     <item ID="45_north_america" Name="Autostrada" />
     <item ID="47_canada_a" Name="Cichy Brzeg" />
     <item ID="59_asia_great_wall" Name="Granica imperium" />
+    <item ID="60_asia_miao" Name="Rzeka Perłowa" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Święta dolina" />
     <item ID="83_kharkiv" Name="Charków" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Miasto duchów" />
     <item ID="96_prohorovka_defense" Name="Łuk ognia" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Prowincja" />
     <item ID="15_komarin" Name="Komaryn" />
-    <item ID="39_crimea" Name="Południowe Wybrzeże" />
     <item ID="51_asia" Name="Smocza Grań" />
     <item ID="53_japan" Name="Ukryta wioska" />
-    <item ID="60_asia_miao" Name="Rzeka Perłowa" />
     <item ID="85_winter" Name="Siewierogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg w płomieniach" />
     <item ID="99_himmelball" Name="Mistrzostwo Himmelsdorf" />
     <item ID="102_deathtrack" Name="Wyścig czołgów" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Nieznany" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Upłynął czas bitwy" />
     <item ID="4" Name="Bitwa została zakończona z powodu awarii systemu" />
     <item ID="5" Name="Porażki techniczne" />
+    <item ID="6" Name="Punkty zwycięstwa" />
     <item ID="unknown" Name="Nieznany" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
