--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Танковый полигон" />
     <item ID="01_karelia" Name="Карелия" />
     <item ID="02_malinovka" Name="Малиновка" />
+    <item ID="03_campania" Name="Провинция" />
     <item ID="04_himmelsdorf" Name="Химмельсдорф" />
     <item ID="05_prohorovka" Name="Прохоровка" />
     <item ID="06_ensk" Name="Энск" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Рыбацкая бухта" />
     <item ID="37_caucasus" Name="Перевал" />
     <item ID="38_mannerheim_line" Name="Заполярье" />
+    <item ID="39_crimea" Name="Южный берег" />
     <item ID="43_north_america" Name="Северо-Запад" />
     <item ID="44_north_america" Name="Лайв Окс" />
     <item ID="45_north_america" Name="Хайвей" />
     <item ID="47_canada_a" Name="Тихий берег" />
     <item ID="59_asia_great_wall" Name="Граница империи" />
+    <item ID="60_asia_miao" Name="Жемчужная река" />
     <item ID="63_tundra" Name="Тундра" />
     <item ID="73_asia_korea" Name="Священная долина" />
     <item ID="83_kharkiv" Name="Харьков" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Затерянный город" />
     <item ID="96_prohorovka_defense" Name="Огненная дуга" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Провинция" />
     <item ID="15_komarin" Name="Комарин" />
-    <item ID="39_crimea" Name="Южный берег" />
     <item ID="51_asia" Name="Хребет Дракона" />
     <item ID="53_japan" Name="Скрытая деревня" />
-    <item ID="60_asia_miao" Name="Жемчужная река" />
     <item ID="85_winter" Name="Северогорск" />
     <item ID="87_ruinberg_on_fire" Name="Руинберг в огне" />
     <item ID="99_himmelball" />
     <item ID="102_deathtrack" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Время боя истекло" />
     <item ID="4" Name="Бой прекращён по причине сбоя" />
     <item ID="5" Name="Техническое поражение" />
+    <item ID="6" Name="Очки победы" />
     <item ID="unknown" Name="Неизвестно" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
