--- a/data/lang/sr.xml
+++ b/data/lang/sr.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Poligon za Trening" />
     <item ID="01_karelia" Name="Karelija" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Provincija" />
     <item ID="04_himmelsdorf" Name="Himelsdorf" />
     <item ID="05_prohorovka" Name="Prohorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Ribarev zaliv" />
     <item ID="37_caucasus" Name="Planinski prelaz" />
     <item ID="38_mannerheim_line" Name="Arktik" />
+    <item ID="39_crimea" Name="Južna obala" />
     <item ID="43_north_america" Name="Severozapad" />
     <item ID="44_north_america" Name="Lajv Oaks" />
     <item ID="45_north_america" Name="Autoput" />
     <item ID="47_canada_a" Name="Obala Pacifika" />
     <item ID="59_asia_great_wall" Name="Granica Imperije" />
+    <item ID="60_asia_miao" Name="Biserna reka" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Sveta dolina" />
     <item ID="83_kharkiv" Name="Harkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Grad duhova" />
     <item ID="96_prohorovka_defense" Name="Ognjeni luk" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provincija" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Južna obala" />
     <item ID="51_asia" Name="Zmajev greben" />
     <item ID="53_japan" Name="Skriveno selo" />
-    <item ID="60_asia_miao" Name="Biserna reka" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg u požaru" />
     <item ID="99_himmelball" Name="Šampionat Himelsdorfa" />
     <item ID="102_deathtrack" Name="Tenkovski Reli" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Nepoznato" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Vreme bitke je isteklo" />
     <item ID="4" Name="Bitka je prekinuta zbog sistemske greške" />
     <item ID="5" Name="Tehnički poraz" />
+    <item ID="6" Name="Poeni pobede" />
     <item ID="unknown" Name="Nepoznato" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
