--- a/data/lang/sv.xml
+++ b/data/lang/sv.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Övningsområde" />
     <item ID="01_karelia" Name="Karelen" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Provins" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prochorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Fisherman's Bay" />
     <item ID="37_caucasus" Name="Bergspass" />
     <item ID="38_mannerheim_line" Name="Polarområde" />
+    <item ID="39_crimea" Name="Sydkust" />
     <item ID="43_north_america" Name="Nordväst" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Motorväg" />
     <item ID="47_canada_a" Name="Stillsam kust" />
     <item ID="59_asia_great_wall" Name="Imperiets gräns" />
+    <item ID="60_asia_miao" Name="Pärlfloden" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Helig Dal" />
     <item ID="83_kharkiv" Name="Charkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Spökstad" />
     <item ID="96_prohorovka_defense" Name="Brandgata" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Provins" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Sydkust" />
     <item ID="51_asia" Name="Dragon Ridge" />
     <item ID="53_japan" Name="Dold dal" />
-    <item ID="60_asia_miao" Name="Pärlfloden" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg brinner" />
     <item ID="99_himmelball" Name="Mästerskap i Himmelsdorf" />
     <item ID="102_deathtrack" Name="Tankrally" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Okänd" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Tiden för striden har gått ut" />
     <item ID="4" Name="Striden avslutat på grund av systemfel" />
     <item ID="5" Name="Teknisk förlust" />
+    <item ID="6" Name="Vinstpoäng" />
     <item ID="unknown" Name="Okänd" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
