--- a/data/lang/tr.xml
+++ b/data/lang/tr.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="Eğitim alanı" />
     <item ID="01_karelia" Name="Karelia" />
     <item ID="02_malinovka" Name="Malinovka" />
+    <item ID="03_campania" Name="Taşra" />
     <item ID="04_himmelsdorf" Name="Himmelsdorf" />
     <item ID="05_prohorovka" Name="Prokhorovka" />
     <item ID="06_ensk" Name="Ensk" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="Balıkçı Koyu" />
     <item ID="37_caucasus" Name="Dağ geçidi" />
     <item ID="38_mannerheim_line" Name="Kutup Bölgesi" />
+    <item ID="39_crimea" Name="Güney Kıyısı" />
     <item ID="43_north_america" Name="Kuzeybatı" />
     <item ID="44_north_america" Name="Live Oaks" />
     <item ID="45_north_america" Name="Otoban" />
     <item ID="47_canada_a" Name="Sakin Sahil" />
     <item ID="59_asia_great_wall" Name="İmparatorluk Sınırı" />
+    <item ID="60_asia_miao" Name="İnci Nehri" />
     <item ID="63_tundra" Name="Tundra" />
     <item ID="73_asia_korea" Name="Kutsal Vadi" />
     <item ID="83_kharkiv" Name="Harkov" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="Hayalet Kasaba" />
     <item ID="96_prohorovka_defense" Name="Ateş Hattı" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="Taşra" />
     <item ID="15_komarin" Name="Komarin" />
-    <item ID="39_crimea" Name="Güney Kıyısı" />
     <item ID="51_asia" Name="Ejder Yamacı" />
     <item ID="53_japan" Name="Saklı Köy" />
-    <item ID="60_asia_miao" Name="İnci Nehri" />
     <item ID="85_winter" Name="Severogorsk" />
     <item ID="87_ruinberg_on_fire" Name="Ruinberg Yanıyor" />
     <item ID="99_himmelball" Name="Himmelsdorf Şampiyonası" />
     <item ID="102_deathtrack" Name="Tank Rallisi" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="Bilinmeyen" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="Savaş süresi bitti" />
     <item ID="4" Name="Savaş sistem hatası sebebiyle bitti" />
     <item ID="5" Name="Teknik Yenilgi" />
+    <item ID="6" Name="Zafer Puanı" />
     <item ID="unknown" Name="Bilinmeyen" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
