--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -666,6 +666,7 @@
     <item ID="00_tank_tutorial" Name="训练场" />
     <item ID="01_karelia" Name="卡累利阿" />
     <item ID="02_malinovka" Name="马利诺夫卡" />
+    <item ID="03_campania" Name="坎帕尼亚" />
     <item ID="04_himmelsdorf" Name="锡默尔斯多夫" />
     <item ID="05_prohorovka" Name="普罗霍洛夫卡" />
     <item ID="06_ensk" Name="安斯克" />
@@ -696,11 +697,13 @@
     <item ID="36_fishing_bay" Name="费舍尔湾" />
     <item ID="37_caucasus" Name="胜利之门" />
     <item ID="38_mannerheim_line" Name="极地冰原" />
+    <item ID="39_crimea" Name="雅尔塔小镇" />
     <item ID="43_north_america" Name="西部小镇" />
     <item ID="44_north_america" Name="里夫奥克斯" />
     <item ID="45_north_america" Name="州际公路" />
     <item ID="47_canada_a" Name="寂静海岸" />
     <item ID="59_asia_great_wall" Name="钢铁长城" />
+    <item ID="60_asia_miao" Name="乌蒙雄山" />
     <item ID="63_tundra" Name="喀秋莎" />
     <item ID="73_asia_korea" Name="神圣之谷" />
     <item ID="83_kharkiv" Name="哈尔科夫" />
@@ -711,22 +714,19 @@
     <item ID="95_lost_city" Name="失落小镇" />
     <item ID="96_prohorovka_defense" Name="烈焰丘陵" />
     <item ID="h03_shopfest_2015" />
+    <item ID="h04_remday_2015" />
+    <item ID="h05_thanks_2015" />
+    <item ID="h06_vetday_2015" />
     <item ID="h07_newyear_2015" />
-    <item ID="03_campania" Name="坎帕尼亚" />
     <item ID="15_komarin" Name="科马林" />
-    <item ID="39_crimea" Name="雅尔塔小镇" />
     <item ID="51_asia" Name="香格里拉" />
     <item ID="53_japan" Name="迷雾小镇" />
-    <item ID="60_asia_miao" Name="乌蒙雄山" />
     <item ID="85_winter" Name="别洛戈尔斯克" />
     <item ID="87_ruinberg_on_fire" Name="鲁别克（烈焰）" />
     <item ID="99_himmelball" />
     <item ID="102_deathtrack" />
     <item ID="h01_bday_2015" />
     <item ID="h02_tmday_2015" />
-    <item ID="h04_remday_2015" />
-    <item ID="h05_thanks_2015" />
-    <item ID="h06_vetday_2015" />
     <item ID="unknown" Name="未知" />
   </Lang_Maps>
   <Lang_Nations>
@@ -787,6 +787,7 @@
     <item ID="3" Name="战斗时间超时" />
     <item ID="4" Name="因系统错误导致战斗结束" />
     <item ID="5" Name="失败" />
+    <item ID="6" Name="胜利点数" />
     <item ID="unknown" Name="未知" />
   </Lang_FinishReasons>
   <Lang_MasteryBadges>
